--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LostFound"
         tools:targetApi="31">
-        <receiver
-            android:enabled="true"
-            android:exported="false"
-            android:name="com.example.lostfound.AlarmReceiver" />
 
         <activity
             android:exported="false"
@@ -57,7 +53,21 @@
         <activity
             android:exported="false"
             android:name="com.example.lostfound.CaseDetailsActivity" />
-    </application>
 
+        <activity
+            android:exported="false"
+            android:name="com.example.lostfound.EditProfileActivity" />
+        <activity
+            android:exported="false"
+            android:name="com.example.lostfound.AdminEditCaseActivity" />
+        <activity
+            android:exported="false"
+            android:name="com.example.lostfound.UserManagementActivity" />
+        <activity
+            android:exported="false"
+            android:name="com.example.lostfound.NotificationReceiver"
+            tools:ignore="Instantiatable" />
+
+    </application>
 
 </manifest>
